[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/Map/1_lv/fire.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPC's/Tata/tata.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/Map/Floor/grass.tres" type="TileSet" id=4]
[ext_resource path="res://art/Map/Floor/Black.tres" type="TileSet" id=5]
[ext_resource path="res://Maps/lv14.gd" type="Script" id=6]
[ext_resource path="res://art/Map/tree.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemy/pluskw.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemy/skeleton.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 163.518

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( -4379.14, -272.647, -4136.19, -541.432, -3963.35, -366.816, -4038.19, -174.382, -4398.11, 26.9609, -4381.74, -320.705, -4695.67, -571.723, -4447.11, -343.496, -4500.52, -335.567, -4907.71, -414.925, -4476.59, -268.789, -4576.29, 94.6692, -4905.93, -8.67508, -4517.91, -306.227, -5053.82, -133.401, -5043.12, -340.089 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 1, 0, 5 ), PoolIntArray( 6, 1, 5, 7 ), PoolIntArray( 6, 7, 8, 9 ), PoolIntArray( 10, 0, 4, 11, 12 ), PoolIntArray( 9, 8, 13, 12, 14, 15 ), PoolIntArray( 13, 10, 12 ) ]
outlines = [ PoolVector2Array( -5043.12, -340.089, -5053.82, -133.401, -4905.93, -8.67508, -4576.29, 94.6692, -4398.11, 26.9609, -4038.19, -174.382, -3963.35, -366.816, -4136.19, -541.432, -4695.67, -571.723, -4907.71, -414.925 ), PoolVector2Array( -4476.59, -268.789, -4517.91, -306.227, -4500.52, -335.567, -4447.11, -343.496, -4381.74, -320.705, -4379.14, -272.647 ) ]

[node name="Map" type="Node2D"]
script = ExtResource( 6 )

[node name="TileMap2" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
mode = 1
tile_set = ExtResource( 5 )
cell_size = Vector2( 240, 120 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -1179636, 0, 0, -1179635, 0, 0, -1114098, 0, 0, -1048561, 0, 0, -983025, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524285, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458750, 0, 0, -458748, 0, 0, -458747, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -131080, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 131059, 0, 0, 131060, 0, 0, 131061, 0, 0, 131062, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 196595, 0, 0, 196596, 0, 0, 196597, 0, 0, 196598, 0, 0, 196599, 0, 0, 196600, 0, 0, 196601, 0, 0, 196602, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 262130, 0, 0, 262131, 0, 0, 262132, 0, 0, 262133, 0, 0, 262134, 0, 0, 262135, 0, 0, 262136, 0, 0, 262137, 0, 0, 262138, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 327666, 0, 0, 327667, 0, 0, 327668, 0, 0, 327669, 0, 0, 327670, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327674, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 393202, 0, 0, 393203, 0, 0, 393204, 0, 0, 393205, 0, 0, 393206, 0, 0, 393207, 0, 0, 393208, 0, 0, 393209, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 458739, 0, 0, 458740, 0, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 524275, 0, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 589811, 0, 0, 589812, 0, 0, 589813, 0, 0, 589814, 0, 0, 589815, 0, 0, 589816, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 655347, 0, 0, 655348, 0, 0, 655349, 0, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589834, 0, 0, 720884, 0, 0, 720885, 0, 0, 720886, 0, 0, 720887, 0, 0, 720888, 0, 0, 720889, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 786420, 0, 0, 786421, 0, 0, 786422, 0, 0, 786423, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 851958, 0, 0, 851959, 0, 0, 851960, 0, 0, 851961, 0, 0, 851962, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 786437, 0, 0 )

[node name="TileMap" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 4 )
cell_size = Vector2( 240, 120 )
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -65541, 0, 0, -65540, 2, 0, -65539, 2, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -5, 0, 0, -4, 0, 0, -3, 2, 0, -2, 0, 0, -1, 1, 0, -65536, 1, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 1, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 1, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 1, 0, 196607, 1, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 262140, 3, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 0, 0, 196611, 0, 0, 327676, 3, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 3, 0, 262145, 3, 0, 262146, 1, 0, 393212, 3, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 3, 0, 327681, 3, 0, 327682, 1, 0, 458748, 3, 0, 458749, 3, 0, 458750, 1, 0, 458751, 1, 0, 393216, 3, 0, 393217, 3, 0, 393218, 1, 0, 393219, 1, 0, 524284, 3, 0, 524285, 3, 0, 524286, 1, 0, 524287, 1, 0, 458752, 3, 0, 458753, 3, 0, 458754, 1, 0, 458755, 1, 0, 589820, 3, 0, 589821, 3, 0, 589822, 1, 0, 589823, 1, 0, 524288, 3, 0, 524289, 3, 0, 524290, 1, 0, 524291, 3, 0, 655356, 0, 0, 655357, 0, 0, 655358, 3, 0, 655359, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 2, 0, 589827, 3, 0, 720889, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 1, 0, 655360, 3, 0, 655361, 3, 0, 655362, 2, 0, 655363, 3, 0, 786408, 2, 0, 786409, 1, 0, 786410, 1, 0, 786411, 2, 0, 786412, 2, 0, 786413, 2, 0, 786416, 2, 0, 786417, 2, 0, 786423, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 2, 0, 720899, 3, 0, 720900, 3, 0, 851942, 2, 0, 851943, 2, 0, 851944, 2, 0, 851945, 2, 0, 851946, 2, 0, 851947, 0, 0, 851948, 2, 0, 851949, 2, 0, 851950, 2, 0, 851951, 2, 0, 851952, 2, 0, 851953, 2, 0, 851954, 2, 0, 851955, 2, 0, 851956, 2, 0, 851957, 2, 0, 851958, 2, 0, 851959, 2, 0, 851960, 2, 0, 851961, 0, 0, 851962, 0, 0, 851963, 0, 0, 851964, 2, 0, 851965, 2, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 917479, 1, 0, 917480, 2, 0, 917481, 2, 0, 917482, 2, 0, 917483, 2, 0, 917484, 2, 0, 917485, 2, 0, 917486, 2, 0, 917487, 2, 0, 917488, 2, 0, 917489, 2, 0, 917490, 2, 0, 917491, 2, 0, 917492, 2, 0, 917493, 2, 0, 917494, 2, 0, 917495, 0, 0, 917496, 0, 0, 917497, 0, 0, 917498, 0, 0, 917499, 0, 0, 917500, 2, 0, 917501, 2, 0, 917502, 2, 0, 917503, 0, 0, 851968, 0, 0, 983015, 2, 0, 983016, 2, 0, 983017, 2, 0, 983018, 2, 0, 983019, 2, 0, 983020, 2, 0, 983021, 2, 0, 983022, 0, 0, 983023, 2, 0, 983024, 2, 0, 983025, 2, 0, 983026, 2, 0, 983027, 2, 0, 983028, 2, 0, 983029, 2, 0, 983030, 2, 0, 983031, 2, 0, 983032, 0, 0, 983033, 0, 0, 983034, 0, 0, 983035, 0, 0, 983036, 2, 0, 983037, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 1048551, 2, 0, 1048552, 2, 0, 1048553, 2, 0, 1048554, 1, 0, 1048555, 0, 0, 1048556, 2, 0, 1048557, 0, 0, 1048558, 2, 0, 1048559, 0, 0, 1048560, 2, 0, 1048561, 2, 0, 1048562, 2, 0, 1048563, 2, 0, 1048564, 2, 0, 1048565, 2, 0, 1048566, 2, 0, 1048567, 2, 0, 1048568, 0, 0, 1048569, 0, 0, 1048570, 0, 0, 1048571, 2, 0, 1048572, 0, 0, 1048573, 0, 0, 1048574, 0, 0, 1048575, 0, 0, 983040, 0, 0, 1114087, 2, 0, 1114088, 2, 0, 1114089, 2, 0, 1114090, 1, 0, 1114091, 0, 0, 1114092, 0, 0, 1114093, 0, 0, 1114094, 0, 0, 1114095, 2, 0, 1114096, 2, 0, 1114097, 2, 0, 1114098, 2, 0, 1114099, 2, 0, 1114100, 2, 0, 1114101, 2, 0, 1114102, 2, 0, 1114103, 2, 0, 1114104, 2, 0, 1114105, 0, 0, 1114106, 2, 0, 1114107, 2, 0, 1179623, 2, 0, 1179624, 2, 0, 1179625, 2, 0, 1179626, 1, 0, 1179627, 1, 0, 1179628, 0, 0, 1179629, 1, 0, 1179630, 1, 0, 1179631, 1, 0, 1179632, 2, 0, 1179633, 2, 0, 1179634, 2, 0, 1179635, 2, 0, 1179636, 2, 0, 1179637, 2, 0, 1179638, 2, 0, 1179639, 2, 0, 1179640, 2, 0, 1179641, 2, 0, 1245159, 1, 0, 1245160, 2, 0, 1245161, 2, 0, 1245162, 2, 0, 1245163, 2, 0, 1245164, 2, 0, 1245165, 2, 0, 1245166, 2, 0, 1245167, 2, 0, 1245168, 2, 0, 1245169, 2, 0, 1245170, 2, 0, 1245171, 2, 0, 1245172, 2, 0, 1245173, 2, 0, 1245174, 2, 0, 1245175, 2, 0, 1245176, 2, 0, 1310695, 2, 0, 1310696, 1, 0, 1310697, 2, 0, 1310698, 1, 0, 1310699, 1, 0, 1310700, 1, 0, 1310701, 0, 0, 1310702, 1, 0, 1310703, 1, 0, 1310704, 0, 0, 1310705, 2, 0, 1310706, 2, 0, 1310707, 2, 0, 1310708, 2, 0, 1310709, 2, 0, 1310710, 2, 0, 1310711, 2, 0, 1376232, 2, 0, 1376233, 2, 0, 1376234, 1, 0, 1376235, 1, 0, 1376236, 1, 0, 1376237, 0, 0, 1376238, 1, 0, 1376239, 0, 0, 1376240, 0, 0, 1376241, 0, 0, 1376242, 0, 0, 1376243, 2, 0, 1376244, 2, 0, 1376245, 2, 0, 1441769, 2, 0, 1441770, 2, 0, 1441771, 1, 0, 1441772, 1, 0, 1441773, 2, 0, 1441774, 2, 0, 1441775, 2, 0, 1441776, 2, 0, 1441780, 2, 0 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 528.35, 14.9981 )

[node name="StaticBody2D" parent="YSort" instance=ExtResource( 3 )]
position = Vector2( 424.2, -316.298 )

[node name="StaticBody2D2" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 419.438, -108.348 )

[node name="StaticBody2D3" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( -329.29, 284.487 )

[node name="blip2" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( -4845.91, -183.831 )

[node name="blip" parent="YSort" instance=ExtResource( 9 )]
position = Vector2( -4714.57, -350.092 )

[node name="StaticBody2D5" parent="YSort" instance=ExtResource( 2 )]
visible = false
position = Vector2( -1140.65, 704.897 )
rotation = -0.269513

[node name="StaticBody2D6" parent="YSort" instance=ExtResource( 2 )]
visible = false
position = Vector2( -2056.9, 636.378 )
rotation = -0.269513

[node name="StaticBody2D7" parent="YSort" instance=ExtResource( 2 )]
visible = false
position = Vector2( -2954.04, 372.253 )
rotation = -0.269513

[node name="StaticBody2D8" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( -3618.07, 210.949 )
rotation = -0.269513

[node name="Node2D" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( -4527.78, -334.708 )
scale = Vector2( 3, 3 )
z_index = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0, 0, 0, 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -347.738, 282.222 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -1155.73, 706.058 )
shape = SubResource( 1 )

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( -2075.73, 638.058 )
shape = SubResource( 1 )

[node name="Area2D4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2( -2965.25, 376.433 )
shape = SubResource( 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
visible = false
position = Vector2( 21.3813, 26.0595 )
rotation = -0.00150953
navpoly = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered"]
[connection signal="body_entered" from="Area2D4" to="." method="_on_Area2D4_body_entered"]
